fix: ui spacing issues in mobile

--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -203,6 +203,10 @@ body {
   border-radius: 10px;
   transition: 0.3s ease;
   padding: 40px 20px;
+
+  @media (max-width: 600px) {
+    padding: 30px 20px;
+  }
 }
 
 .swiper-slide-active {
